environments/dev/kubernetes/services/kafka/kafka-connector-health-check.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-connector-health-check
  labels:
    app: kafka-connector-health-check
    env: dev
  namespace: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-connector-health-check
  revisionHistoryLimit: 1
  template:
    metadata:
      name: kafka-connector-health-check
      labels:
        env: dev
        app: kafka-connector-health-check
    spec:
      imagePullSecrets:
        - name: steblynskyi
      containers:
      - name: kafka-connector-health-check
        image: steblynskyi-docker.jfrog.io/kafka-connector-health-check:v1.0.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 25m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 256Mi
