environments/dev/kubernetes/services/kafka/kafka.yaml
# kafka headless service
apiVersion: v1
kind: Service
metadata:
  name: kafka-headless
  namespace: "kafka"
  labels:
    app: kafka
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: kafka-client
    - name: tcp-internal
      port: 9093
      protocol: TCP
      targetPort: kafka-internal
  selector:
    app: kafka
---
# kafka service
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: "kafka"
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Name=kafka-cluster"
    service.beta.kubernetes.io/aws-load-balancer-security-groups: sg-1
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-1,subnet-2
    external-dns.alpha.kubernetes.io/hostname: kafka-cluster.dev-steblynskyi.com
  labels:
    app: kafka
spec:
  type: LoadBalancer
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: kafka-client
    - port: 9094
      name: kafka-external
      protocol: TCP
      targetPort: 9094
  selector:
    app: kafka
---
# Kafka JMX service
apiVersion: v1
kind: Service
metadata:
  name: kafka-jmx-metrics
  namespace: "kafka"
  labels:
    app: kafka-jmx-metrics
  annotations:
    steblynskyi.io/scrape: "true"
    kafka.io/metric_path: "/"
    kafka.io/scrape_port: '5556'
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http-metrics
      port: 5556
      protocol: TCP
      targetPort: metrics
  selector:
    app: kafka
---
# kafka broker node -1 service
apiVersion: v1
kind: Service
metadata:
  name: kafka-0
  namespace: "kafka"
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Name=kafka-0"
    service.beta.kubernetes.io/aws-load-balancer-security-groups: sg-1
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-1,subnet-2
    external-dns.alpha.kubernetes.io/hostname: kafka-0.dev-steblynskyi.com
  labels:
    app: kafka
spec:
  type: LoadBalancer
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: kafka-client
    - port: 9094
      name: kafka-external
      protocol: TCP
      targetPort: 9094
  selector:
    statefulset.kubernetes.io/pod-name: kafka-0
---
# kafka broker node -2 service
apiVersion: v1
kind: Service
metadata:
  name: kafka-1
  namespace: "kafka"
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Name=kafka-1"
    service.beta.kubernetes.io/aws-load-balancer-security-groups: sg-1
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-1,subnet-2
    external-dns.alpha.kubernetes.io/hostname: kafka-1.dev-steblynskyi.com
  labels:
    app: kafka
spec:
  type: LoadBalancer
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: kafka-client
    - port: 9094
      name: kafka-external
      protocol: TCP
      targetPort: 9094
  selector:
    statefulset.kubernetes.io/pod-name: kafka-1
---
# kafka broker node -2 service
apiVersion: v1
kind: Service
metadata:
  name: kafka-2
  namespace: "kafka"
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: "Name=kafka-2"
    service.beta.kubernetes.io/aws-load-balancer-security-groups: sg-1
    service.beta.kubernetes.io/aws-load-balancer-subnets: subnet-1,subnet-2
    external-dns.alpha.kubernetes.io/hostname: kafka-2.dev-steblynskyi.com
  labels:
    app: kafka
spec:
  type: LoadBalancer
  sessionAffinity: None
  ports:
    - name: tcp-client
      port: 9092
      protocol: TCP
      targetPort: kafka-client
    - port: 9094
      name: kafka-external
      protocol: TCP
      targetPort: 9094
  selector:
    statefulset.kubernetes.io/pod-name: kafka-2
---
# Kafka statefulset
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: "kafka"
  labels:
    app: kafka
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kafka
  serviceName: kafka-headless
  template:
    metadata:
      name: kafka
      labels:
        app: kafka
      annotations:
        "cluster-autoscaler.kubernetes.io/safe-to-evict": "false"
    spec:
      hostNetwork: false
      hostIPC: false
      priorityClassName: system-cluster-critical
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: kafka
                namespaces:
                  - "kafka"
                topologyKey: kubernetes.io/hostname
              weight: 1
      securityContext:
        fsGroup: 1001
      imagePullSecrets:
        - name: steblynskyi
      containers:
        - name: kafka
          image: docker.io/bitnami/kafka:3.2.0-debian-11-r12
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          command:
            - /scripts/setup.sh
          ports:
            - name: kafka-client
              containerPort: 9092
            - name: kafka-internal
              containerPort: 9093
            - name: kafka-external
              containerPort: 9094
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 9999
              scheme: HTTP
            initialDelaySeconds: 30
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 30
          resources:
            limits: {}
            requests:
              cpu: 50m
              memory: 250Mi
          volumeMounts:
            - name: data
              mountPath: /bitnami/kafka
            - name: logs
              mountPath: /opt/bitnami/kafka/logs
            - name: scripts
              mountPath: /scripts/setup.sh
              subPath: setup.sh
        - name: jmx-exporter
          image: docker.io/bitnami/jmx-exporter:0.17.0-debian-11-r24
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          command:
            - java
          args:
            - -XX:+UnlockExperimentalVMOptions
            - -XX:+UseCGroupMemoryLimitForHeap
            - -XX:MaxRAMFraction=1
            - -XshowSettings:vm
            - -jar
            - jmx_prometheus_httpserver.jar
            - "5556"
            - /etc/jmx-kafka/jmx-kafka-prometheus.yml
          ports:
            - name: metrics
              containerPort: 5556
          resources:
            limits: {}
            requests:
              cpu: 25m
              memory: 250Mi
          volumeMounts:
            - name: jmx-config
              mountPath: /etc/jmx-kafka
        - name: kafka-health-check
          image: steblynskyi-docker.jfrog.io/kafka-broker-health-check:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: health
              containerPort: 9999
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 256Mi
      volumes:
        - name: scripts
          configMap:
            name: kafka-scripts
            defaultMode: 0755
        - name: jmx-config
          configMap:
            name: jmx-configuration
        - name: logs
          emptyDir: {}
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - "ReadWriteOnce"
        resources:
          requests:
            storage: "15Gi"
